--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
         "react": "^16.13.1",
         "react-app-polyfill": "^1.0.6",
         "react-dom": "^16.13.1",
-        "react-loading": "^2.0.3"
+        "react-loading": "^2.0.3",
+        "react-select": "^5.8.0"
     }
 }
